Implement Venta functionality; add Venta and DetalleVenta models, services, and controllers; integrate validation and repository methods for sales management